# daily-standup-tui

./: CHANGELOG.md  Cargo.toml  README.md  pre-build.sh
.github/workflows/: build-release.yml  changelog.yml
git-hooks/: pre-commit
src/: main.rs
src/api/: files.rs
src/ui/: config.rs
