[package]
name = "daily-standup-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.17.0"
toml = "0.5.8"
dirs = "4.0.0"
rand = "0.8.4"


[dependencies.serde]
version = "1.0"
features = ["derive"]